--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "morgan": "^1.7.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "mongoose" : "^4.5.9"
   }
 }
